--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ngrx/store": "^18.1.1",
     "@primeng/themes": "^18.0.2",
     "@tailwindcss/postcss": "^4.0.11",
     "primeicons": "^7.0.0",
