--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "format": "prettier --write .",
+    "format-check": "prettier --check .",
     "test": "ng test"
   },
   "private": true,
@@ -23,6 +25,7 @@
     "@ngrx/store": "^18.1.1",
     "@primeng/themes": "^18.0.2",
     "@tailwindcss/postcss": "^4.0.11",
+    "prettier": "^3.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^18.0.2",
     "rxjs": "~7.8.0",
