--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ngrx/effects": "^18.1.1",
     "@ngrx/store": "^18.1.1",
     "@primeng/themes": "^18.0.2",
     "@tailwindcss/postcss": "^4.0.11",
+    "class-transformer": "^0.5.1",
+    "date-fns": "^4.1.0",
     "prettier": "^3.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^18.0.2",
